deployment.yml
apiVersion: apps/v1 # Compatible with Kubernetes 1.29
kind: Deployment
metadata:
  namespace: fortune
  name: fortune
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: fortune  
  template:
    metadata:
      labels:
        app: fortune
    spec:
      serviceAccountName: fortune
      containers:
      - name: fortune
        image: deependrasingh7773/fortune-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            cpu: 300m
            memory: 500Mi
