service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: fortune
  name: fortune
spec:
  selector:
    app: fortune
  ports:
  - protocol: TCP
    port: 8080  
    targetPort: 8080
  type: "LoadBalancer"
