ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: fortune
  name: ingress-fortune
  annotations:
    elb.ingress.kubernetes.io/scheme: internet-facing
    elb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fortune
              port:
                number: 8080
